--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     
     <!-- New Rule Button -->
     <div>
-        <button class="btn" id="button2" onclick="display_rule();">New Rule</button>
+        <button class="btn" id="button2" onclick="display_rule();">        </button>
     </div>
     
     <!-- "Result" element displaying drinking rule -->
@@ -32,7 +32,7 @@
     <!-- multiple choice selection box for list inclusion -->
     <div>
         <select id="choices" multiple="multiple">
-            <option value="clean_rules">clean</option>
+            <option value="clean_rules">get weird</option>
             <option value="stripping_rules">get neked</option>
             <option value="drinking_rules">get drunk</option>
             <option value="smoking_rules">get stoney</option>
