--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div>
         <select id="choices" multiple="multiple">
             <option value="clean_rules">get weird</option>
-            <option value="stripping_rules">get neked</option>
+            <option value="stripping_rules">get nekd</option>
             <option value="drinking_rules">get drunk</option>
             <option value="smoking_rules">get stoney</option>
             <option value="sex_rules">spice it up</option>
